# searchv1beta

./: .env.example  .gitignore  README.md  competitive-intelligence-report.md  config.yml  gcc-recruiter-sources.md  pyproject.toml  rcf_search_20260506_132145.csv  requirements.txt
.omg/: ARCHITECTURE-REPORT.md  ULTRAQA-DEEP-SCAN-R2.md  ULTRAQA-REPORT.md
.omg/research/: master-research-report.md  ux-innovation-audit.md
.omg/specs/: deep-interview-recruiter-finder.md
.omg/state/: team-state.json
db/: schema.sql  validate_schema.py
models/: __init__.py  enums.py  models.py  validators.py
rcf/: __init__.py  cli.py  config.py  export.py  logging.py
rcf/core/: __init__.py  api_tracker.py  base_plugin.py  deduplicator.py  orchestrator.py  plugin_registry.py  scorer.py
rcf/plugins/: __init__.py  abstract_api.py  anymail_finder.py  apollo.py  arabic_name_normalizer.py  bayt.py  disify.py  dmcc_directory.py  dropcontact.py  dubizzle.py  egon_zehnder.py  email_permutator.py  emaratfinder.py  etihad_careers.py  expatriates.py  facebook_groups.py  github_email.py  google_dorking.py  google_places.py  greenhouse.py  gulf_talent.py  heidrick_and_struggles.py  hunter.py  kaspr.py  korn_ferry.py  lever.py  linkedin.py  lusha.py  naukrigulf.py  numlookup.py  people_data_labs.py  rocketreach.py  russell_reynolds.py  seamless_ai.py  skrapp.py  snov.py  spencer_stuart.py  tomba.py  uae_phone_detector.py  uae_yellow_pages.py  (+4 more)
rcf/storage/: __init__.py
rcf/templates/: __init__.py
rcf/utils/: __init__.py  rate_limiter.py
rcf/verification/: __init__.py
spec/: SPECIFICATION.md  __init__.py  api_tracker.py  deduplicator.py  email_verifier.py  phone_validator.py  scorer.py
tests/: conftest.py  test_cli.py  test_db_schema.py  test_deduplicator.py  test_enum_fixes.py  test_enums.py  test_export.py  test_export_model_mapping.py  test_logging.py  test_models.py  test_phone_prefix_53.py  test_pipeline.py  test_pipeline_fixes.py  test_rate_limiter_edge_cases.py  test_region_gcc_schema.py  test_scorer.py  test_security.py  test_storage.py  test_uae_engines.py  test_validators.py  test_verification.py
uae_engine_spec/: README.md  __init__.py  arabic_name_engine.py  uae_ats.py  uae_compliance.py  uae_domain_engine.py  uae_google_dork.py  uae_phone_engine.py  whatsapp_engine.py
